--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,7 @@ name = "quake-util"
 version = "0.1.0"
 authors = ["Seth <rader.seth@gmail.com>"]
 edition = "2021"
-license = "Unlicense"
+license = "CC0-1.0 OR MIT"
 
 [features]
 default = ["std"]
