Convert /benches to /examples, made benchmarks one-off

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,3 +13,6 @@ std = []
 [dependencies]
 hashbrown = { version = "^0.11", optional = true }
 cstr_core = { version = "^0.2", optional = true, features = ["alloc"] }
+
+[dev-dependencies]
+benchmarking = "^0.4"
