rust.yml: nightly as default toolchain

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -22,7 +22,7 @@ jobs:
     - uses: actions-rs/toolchain@v1
       with:
         toolchain: nightly
-        override: true
+        default: true
         components: clippy
     - name: Check
       run: cargo check ${{ matrix.feature-set }}
