rust.yml: Name test job by features set

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -11,7 +11,7 @@ env:
 
 jobs:
   test:
-    name: Run checks and tests with various feature sets
+    name: Checks and tests with ${{ matrix.feature-set }}
     runs-on: ubuntu-latest
 
     strategy:
