Remove dependency on cstr_core

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,12 +7,11 @@ license = "CC0-1.0 OR MIT"
 
 [features]
 default = ["std"]
-alloc_fills = ["hashbrown", "cstr_core"]
+alloc_fills = ["hashbrown"]
 std = []
 
 [dependencies]
 hashbrown = { version = "^0.12", optional = true }
-cstr_core = { version = "^0.2", optional = true, features = ["alloc"] }
 
 [dev-dependencies]
 benchmarking = "^0.4"
