--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,10 +1,11 @@
 [package]
 name = "quake-util"
-version = "0.1.1"
+version = "0.2.0"
 authors = ["Seth <rader.seth@gmail.com>"]
 edition = "2021"
 description = "A utility library for using Quake file formats"
 license = "CC0-1.0 OR MIT OR Apache-2.0"
+documentation = "https://docs.rs/quake-util"
 
 [features]
 default = ["std"]
